<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jung.tpapplimob1.interface2_AUTH">

    <CheckBox
        android:id="@+id/ManBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="auto"
        android:text="@string/checkboxMan" />

    <CheckBox
        android:id="@+id/womanBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="auto"
        android:text="@string/checkboxWoman" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/_01_01_1999"
        android:inputType="date" />

    <EditText
        android:id="@+id/eMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/mailAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/commentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="sendData"
        android:text="@string/validateButton" />

</LinearLayout>
