<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jung.tpapplimob1.interface4_SPORTS">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Sports_Title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/sport1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:onClick="goLayout5"
        android:text="@string/sport1" />

    <Button
        android:id="@+id/sport2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:onClick="goLayout5"
        android:text="@string/sport2" />

    <Button
        android:id="@+id/sportsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:onClick="goLayout5"
        android:text="@string/sport3" />

    <Button
        android:id="@+id/AccueilButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="accueil"
        android:text="@string/Accueilbutton" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic" />
</LinearLayout>
